# gpx-pipeline

./: .gitignore  LICENSE  README.md  plot.py  pyproject.toml  reduce.py  requirements.txt
test/: RunnerUp_01.gpx
